cabal-version: 2.4

name: micro-json-grammar
version: 0

library
  build-depends:
    aeson,
    base,
    containers,
    scientific,
    text,
    unordered-containers,
    vector,

  default-extensions:
    GADTs
    InstanceSigs
    KindSignatures
    LambdaCase
    OverloadedStrings
    PartialTypeSignatures
    RankNTypes
    TupleSections

  exposed-modules:
    Grammar

  ghc-options:
    -Wall
